--- a/k8resources/pod/multiplecontainer.yaml
+++ b/k8resources/pod/multiplecontainer.yaml
@@ -1,13 +1,11 @@
 apiVersion: v1
 kind: Pod
 metadata:
- name: multiple
+  name: multiple
 spec:
-containers:
- -image: nginx
-  name: nginx
- -image: almalinux
-  name: sidecar
-  command: ["sleep","200"]
-   
-  
+  containers:
+  - name: nginx
+    image: nginx
+  - name: sidecar
+    image: almalinux
+    command: ["sleep","200"]
