--- a/k8resources/pod/image-pull.yaml
+++ b/k8resources/pod/image-pull.yaml
@@ -2,11 +2,10 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: nginx
-  namespace: roboshop
 spec:
   containers:
-  - name: nginx
-    image: nginx:1.14.2
-    imagePullPolicy: Always
-    ports:
-     - containerPort: 80
+    - name: nginx
+      image: nginx
+      imagePullPolicy: Always
+      ports:
+      - containerPort: 80
